# rust-figfont

./: .gitignore  Cargo.toml  README.md  build.rs  shell.nix
.github/workflows/: test.yml
fonts/zipped/: banner.flf  big.flf  block.flf  bubble.flf  digital.flf  ivrit.flf  lean.flf  mini.flf  mnemonic.flf  script.flf  shadow.flf  slant.flf  small.flf  smscript.flf  smshadow.flf  smslant.flf  standard.flf  term.flf
src/: character.rs  error.rs  grapheme.rs  header.rs  lib.rs  subcharacter.rs  utils.rs
tests/: test_loader.rs  test_template
