[package]
name = "figfont"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
encoding = "0.2.33"
thiserror = "1.0.25"
unicode-segmentation = "1.7.1"
unicode-width = "0.1.8"
zip = { version = "0.5.12", optional = true }
